# TU-Analytics-2025

./: PCA.py  README.md  TU_expenditures.py  Third-Way-Economic-Mobility-Index-2024.csv  Third-Way-Economic-Mobility-Index-2024.xlsx  Third-Way-Price-to-Earnings-Premiums-2024.csv  Third-Way-Price-to-Earnings-Premiums-2024.xlsx  categories.json  data.csv  func.py  illtrytobeclean.ipynb  labels.csv  letmetry.py  main.ipynb  main.py  pyproject.toml  strategic_groupings.json
Ranking_datasets/: Forbes-Ranking-2025.json  niche-800.json  timeshighered-2022.json
