[project]
name = "tu-analytics-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "ipykernel>=6.29.5",
    "ipython>=9.0.2",
    "marimo>=0.11.17",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "thefuzz>=0.22.1",
]
